update html scroll tags
Moved the trending and the playlists scroll div closing tag to the bottom with the closing section tag. The scroll playlist was all the way up at the top of the playlists.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!--trending songs-->
   <section id="trending">
     <h2>Trending Songs </h2>
-    <div class="scroll"></div>
+    <div class="scroll">
     <section>
     <div>
     <h3>Aloma</h3>
@@ -124,6 +124,7 @@
             Your browser does not support the <code>audio</code>element.
           </audio>
     </div>
+  </div>
 </section>
 
 <!--button: more trending-->
@@ -132,7 +133,7 @@
  <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scroll1"></div>
+    <div class="scroll1">
    
   <section class="yp">
       <a href="#"><img src="images/best-of-2020-cover.png" alt="the numbers 20 20 with light going in between them on a black background">
@@ -168,6 +169,7 @@
     <p>Background music to keep you going while you study.</p>
   </a> 
 </section>
+  </div>
 </section>
 
 <!--button: all your playlists-->
