--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </p>
 </header>
 <!--body-->
-<body>
+<!--<body> Error message keeps coming up when I check the code validation-->
 <!--navigation-->
 <nav>  
   <h2>Main Navigation</h2>
@@ -70,7 +70,6 @@
       </audio>
   </div>
 </section>
-</section>
 
 <section>
   <div>
@@ -124,6 +123,7 @@
             Your browser does not support the <code>audio</code>element.
           </audio>
     </div>
+    </section>
   </div>
 </section>
 
