--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
  <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scroll1">
+    <div class="scroll">
    
   <section class="yp">
       <a href="#"><img src="images/best-of-2020-cover.png" alt="the numbers 20 20 with light going in between them on a black background">
@@ -179,7 +179,7 @@
   <!--curated playlist-->
   <section id="curated">
     <h2>Curated Playlists</h2>
-    <div class="scroll2">
+    <div class="scroll">
 
  <section class="cp">
     <a href="#"><img src="images/boozy-brunch-cover.png" alt="group of people holding drinks preparing to cheers each other in the day time">
