update html and css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!--navigation-->
 <nav>  
   <h2>Main Navigation</h2>
-  <input type="checkbox" id="dropdown">
+  <input type="hamburger" id="dropdown">
   <label for="dropdown"><span></span></label>
   <label for="dropdown"><span></span></label>
   <label for="dropdown"><span></span></label>
