--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!--navigation-->
 <nav>  
   <h2>Main Navigation</h2>
-  <input type="hamburger" id="dropdown">
+  <input type="checked" id="dropdown">
   <label for="dropdown"><span></span></label>
   <label for="dropdown"><span></span></label>
   <label for="dropdown"><span></span></label>
@@ -130,7 +130,7 @@
 </section>
 
 <!--button: more trending-->
-<a class="button" id="more-trending">More Trending</a>
+<a class="button" >More Trending</a>
   
  <!--your playlists-->
   <section id="playlists">   
@@ -175,7 +175,7 @@
 </section>
 
 <!--button: all your playlists-->
-<a class="button" id="all-your-playlists">All Your Playlists</a>
+<a class="button1">All Your Playlists</a>
 
   
   <!--curated playlist-->
@@ -221,7 +221,7 @@
 </section>
  
  <!--button: more curated-->
- <a class="button" id="more-curated">More Curated</a>
+ <a class="button2">More Curated</a>
   
 <!--footer-->
       <footer>
