--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
 <nav>  
   <h2>Main Navigation</h2>
   <input type="checkbox" id="dropdown">
-  <label for="dropdown"><span></span></label>
-  <label for="dropdown"><span></span></label>
-  <label for="dropdown"><span></span></label>
+  <label for="dropdown">
+    <span></span>
+    <span></span>
+    <span></span>
+  </label>
    <ul>
      <li><a href="#home" class="muzamaker">MuzakMaker</a></li>
      <li><a href="#trending">Trending<br>Songs</a></li>
@@ -37,7 +39,6 @@
   <section id="trending">
     <h2>Trending Songs </h2>
     <div class="scroll">
-      <div class="trend">
     <section>
     <div>
     <h3>Aloma</h3>
@@ -128,7 +129,6 @@
     </div>
     </section>
   </div>
-  </div>
 </section>
 
 <!--button: more trending-->
@@ -137,44 +137,42 @@
  <!--your playlists-->
   <section id="playlists">   
     <h2>Your playlists</h2>
-    <div class="scroll">
-      <div class="yp">
+    <div class="scroll1">
    
   <section>
-      <a href="#" class="imgyp"><img src="images/best-of-2020-cover.png" alt="the numbers 20 20 with light going in between them on a black background">
+      <a href="#"><img src="images/best-of-2020-cover.png" alt="the numbers 20 20 with light going in between them on a black background">
         <h3>Best of 2020</h3>
         <p>The music that got you through the lock down.</p>
       </a>
   </section>
 
   <section>
-    <a href="#" class="imgyp"><img src="images/pumpkin-spice-cover.png" alt="cup of coffee with latte art of a flower in it sitting on a wooded table ">
+    <a href="#"><img src="images/pumpkin-spice-cover.png" alt="cup of coffee with latte art of a flower in it sitting on a wooded table ">
       <h3>Pumpkin Spice</h3>
       <p>Creamy and spicy, just like your favorite autumnal latte.</p>
     </a>
   </section>
 
   <section>
-    <a href="#" class="imgyp"><img src="images/quiet-storm-cover.png" alt="blue and purple like clouds with lighting in coming out of the clouds">
+    <a href="#"><img src="images/quiet-storm-cover.png" alt="blue and purple like clouds with lighting in coming out of the clouds">
       <h3>Quiet Storm</h3>
       <p>Slow tempos and relaxed rhythms.</p>
     </a> 
   </section>
 
 <section>
-  <a href="#" class="imgyp"><img src="images/smooth-jazz-cover.png" alt="a man in a dark green shirt with glasses looking outwards on a grey background">
+  <a href="#"><img src="images/smooth-jazz-cover.png" alt="a man in a dark green shirt with glasses looking outwards on a grey background">
     <h3>Smooth Jazz</h3>
     <p>The pioneers of smooth jazz</p>
   </a>
 </section>
 
 <section>
-  <a href="#" class="imgyp"><img src="images/smooth-study-cover.png" alt="person in a yellow sweater typing on a laptop">
+  <a href="#"><img src="images/smooth-study-cover.png" alt="person in a yellow sweater typing on a laptop">
     <h3>Smooth Study</h3>
     <p>Background music to keep you going while you study.</p>
   </a> 
 </section>
-  </div>
   </div>
 </section>
 
@@ -185,44 +183,42 @@
   <!--curated playlist-->
   <section id="curated">
     <h2>Curated Playlists</h2>
-    <div class="scroll">
-      <div class="cp">
+    <div class="scroll2">
 
  <section>
-    <a href="#" class="imgcp"><img src="images/boozy-brunch-cover.png" alt="group of people holding drinks preparing to cheers each other in the day time">
+    <a href="#"><img src="images/boozy-brunch-cover.png" alt="group of people holding drinks preparing to cheers each other in the day time">
           <h3>Boozy Brunch</h3>
           <p>Light up the afternoon with these energetic hits.</p>
     </a>
   </section>
 
   <section>
-    <a href="#" class="imgcp"><img src="images/dinner-party-cover.png" alt="picnic table with a place setting, wine and candles">
+    <a href="#"><img src="images/dinner-party-cover.png" alt="picnic table with a place setting, wine and candles">
         <h3>Dinner Party</h3>
         <p>Background music to give your party life, but allow your guests to chat.</p>
     </a> 
   </section>
 
   <section>
-    <a href="#" class="imgcp"><img src="images/mellow-cover.png" alt="two people sitting on the park bench surrounded by trees">
+    <a href="#"><img src="images/mellow-cover.png" alt="two people sitting on the park bench surrounded by trees">
       <h3>Mellow</h3>
       <p>Relax after a stressful day with this collection of extra smooth jazz.</p> 
     </a>   
   </section>
 
   <section>
-    <a href="#" class="imgcp"><img src="images/jazz-chill-cover.png" alt="close up of red rose petals">
+    <a href="#"><img src="images/jazz-chill-cover.png" alt="close up of red rose petals">
         <h3>Jazz and Chill</h3>
         <p>Set the mood with these silky sounds.</p>
     </a>
   </section>
 
   <section>
-    <a href="#" class="imgcp"><img src="images/smooth-saxophone-cover.png" alt="blurred group of saxophone players with a saxophone in the front">
+    <a href="#"><img src="images/smooth-saxophone-cover.png" alt="blurred group of saxophone players with a saxophone in the front">
         <h3>Jazz Saxophone</h3>
         <p>The greatest collection of your sax favorites. </p>
     </a>
   </section>
-  </div>
   </div>
 </section>
  
